replace many unchecked exceptions with checked exceptions