@@ -27,7 +27,7 @@ import static de.uni_kiel.rz.fdr.repl.groovy.GroovyPatchesTransformer.PATCHEE_SU
  */
 
 public class Helpers {
-        public static Object darkInvocation(Object target, String methodName, Class<?>[] signature, Object[] arguments) throws InvocationTargetException, IllegalAccessException {
+        public static Object darkInvocation(Object target, String methodName, Class<?>[] signature, Object[] arguments) throws InvocationTargetException, IllegalAccessException, NoSuchMethodException, InsufficientAccessRightsException {
             // requires --add-opens 'java.base/java.lang=ALL-UNNAMED'. maybe the agent's Instrumentation.redefineModule() can be used instead of this parameter?
             try {
                 Class<?> klass = target.getClass();
@@ -40,31 +40,29 @@ public class Helpers {
                     klass = klass.getSuperclass();
                 }
 
-                if (meth == null) throw new RuntimeException("Could not find method " + methodName + " in class");
+                if (meth == null) throw new NoSuchMethodException("Could not find method " + methodName + " in class");
                 meth.setAccessible(true);
                 return meth.invoke(target, arguments);
             } catch (InaccessibleObjectException e) {
-                REPLLog.log(new REPLLogEntry(REPLLogEntry.LOG_LEVEL.ERROR, "REPL: Could not access object of class {}: please add \"--add-opens 'java.base/java.lang=ALL-UNNAMED'\" to your java parameters or unset CAU.Groovy.UseSystemClassLoader to use a private classloader.", target.getClass()), REPLLog.INTERNAL_LOG_TARGETS);
-                throw new RuntimeException("Could not access object of class " + target.getClass() + ": please add \"--add-opens 'java.base/java.lang=ALL-UNNAMED'\" to your java parameters or unset CAU.Groovy.UseSystemClassLoader to use a private classloader.", e);
+                REPLLog.log(new REPLLogEntry(REPLLogEntry.LOG_LEVEL.ERROR, "REPL: Could not access object of class {}" + InsufficientAccessRightsException.explanation, target.getClass()), REPLLog.INTERNAL_LOG_TARGETS);
+                throw new InsufficientAccessRightsException("Could not access object of class " + target.getClass(), e);
             }
         }
 
         // keep this protected -> uses the agent's Instrumentation
-        protected static boolean forbiddenExtendClassPath(ClassLoader classLoader, List<URL> urls) {
+        protected static boolean forbiddenExtendClassPath(ClassLoader classLoader, List<URL> urls) throws InsufficientAccessRightsException, IOException {
             if ((classLoader == null || classLoader == ClassLoader.getSystemClassLoader()) && REPLAgent.inst != null) {
                 for (URL u : urls) {
-                    try {
-                        REPLAgent.inst.appendToSystemClassLoaderSearch(new JarFile(u.getPath()));
-                    } catch (IOException e) {
-                        throw new RuntimeException(e);
-                    }
+                    REPLAgent.inst.appendToSystemClassLoaderSearch(new JarFile(u.getPath()));
                 }
                 return true;
             } else if (classLoader instanceof URLClassLoader ucl) {
                 for (URL u : urls) {
                     try {
                         darkInvocation(ucl, "addURL", new Class<?>[]{URL.class}, new Object[]{u});
-                    } catch (InvocationTargetException | IllegalAccessException e) {
+                    } catch (NoSuchMethodException | IllegalAccessException e) {
+                        throw new RuntimeException("Failed to .addURL() to extend class path, possibly an internal error?", e);
+                    } catch (InvocationTargetException e) {
                         throw new RuntimeException(e);
                     }
                 }
@@ -123,7 +121,7 @@ public class Helpers {
         return TimeUnit.SECONDS.toMicros(i.getEpochSecond()) + TimeUnit.NANOSECONDS.toMicros(i.getNano());
     }
 
-    public static String shellCommand(String command) throws IOException {
+    public static String shellCommand(String command) throws IOException, REPLAgentStartup.ExternalCommandException {
         boolean windows = System.getProperty("os.name").toLowerCase(Locale.ROOT).startsWith("windows");
         ProcessBuilder builder = new ProcessBuilder();
         if (windows) builder.command("cmd.exe", "/c", command);
@@ -132,7 +130,7 @@ public class Helpers {
         try {
             String stdout = new String(proc.getInputStream().readAllBytes());
             int status = proc.waitFor();
-            if (status != 0) throw new RuntimeException("Command " + command + " returned exit status " + status);
+            if (status != 0) throw new REPLAgentStartup.ExternalCommandException("Command " + command + " failed, status " + status);
             return stdout;
         } catch (InterruptedException e) {
             throw new RuntimeException(e);
